@@ -12,6 +12,11 @@
 	* src/Dialog_Partition_Info.cc: use Utils::format_size() instead of
 	  displaying every value in MiB's. Also some cleanups and changes.
 
+2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Dialog_Progress.h,
+	  src/Dialog_Progress.cc: implemented real 'cancel'.
+
 2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Utils.cc: use realpath() to get absolute path to 'real'
